RESOLVED FIXED216672
REGRESSION(r254031): Captions fail to load on jw.org
https://bugs.webkit.org/show_bug.cgi?id=216672
Summary REGRESSION(r254031): Captions fail to load on jw.org
Jer Noble
Reported 2020-09-17 16:23:58 PDT
REGRESSION(r254031): Captions fail to load on jw.org
Attachments
Revert r254031 (17.88 KB, patch)
2020-09-17 16:28 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-09-17 16:24:56 PDT
Jer Noble
Comment 2 2020-09-17 16:28:39 PDT
EWS
Comment 3 2020-09-18 10:03:57 PDT
Committed r267243: <https://trac.webkit.org/changeset/267243> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409083 [details].
Note You need to log in before you can comment on or make changes to this bug.