REGRESSION(r254031): Captions fail to load on jw.org https://bugs.webkit.org/show_bug.cgi?id=216672 <rdar://problem/69016059>

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/cloneNode-expected.txt:
* web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-data-url-expected.txt:
* web-platform-tests/service-workers/service-worker/webvtt-cross-origin.https-expected.txt:

Source/WebCore:

Revert r254031.

* loader/TextTrackLoader.cpp:
(WebCore::TextTrackLoader::load):

LayoutTests:

* http/tests/security/contentSecurityPolicy/resources/track.php: Removed.
* http/tests/security/contentSecurityPolicy/track-redirect-allowed.html:
* http/tests/security/contentSecurityPolicy/track-redirect-allowed2.html:
* http/tests/security/contentSecurityPolicy/track-redirect-blocked.html:
* http/tests/security/text-track-crossorigin-expected.txt:
* http/tests/security/text-track-crossorigin.html:


Canonical link: https://commits.webkit.org/229505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267243 268f45cc-cd09-0410-ab3c-d52691b4dbfc