LayoutTests/http/tests/security/contentSecurityPolicy/resources/track.php
@@ -1,9 +1,0 @@
-<?php
-header("content-type: text/vtt");
-header("Access-Control-Allow-Origin: *");
-?>
-WEBVTT
-
-1
-00:00:00.000 --> 00:00:01.000
-Sample
